--- a/admin/css/BraftonAdminCSS.css
+++ b/admin/css/BraftonAdminCSS.css
@@ -3,12 +3,11 @@
     min-width:500px;
     float:left;
     box-sizing:border-box;
-    font-size:.85em !important;
+    font-size:12px !important;
 }
 #imp-details{
     width:30%;
     min-width:200px;
-    margin-top:-30px;
     margin-right:15px;
     float:right;
     box-sizing:border-box;
@@ -23,7 +22,7 @@
     width:95%;
     min-width:500px;
     border:1px solid #000;
-    font-size:.85em;
+    font-size:10px;
 }
 /* Default color for links inside the tabbed box 
 .ui-widget-content a, .ui-widget-content a:hover, .ui-widget-content a:visited, .ui-widget-content a:active {
@@ -77,12 +76,12 @@ input[type=submit]{
     max-width:425px;
     height:300px;
     overflow:scroll;
-    font-size:.75em;
+    font-size:10px;
     border: 1px solid #CCC;
     padding:10px;
 }
 .form-table{
-    font-size:.75em !important;
+    font-size:.12px !important;
 }
 .importer_header{
     height:125px;
