--- a/admin/css/_BraftonAdminCSS.css
+++ b/admin/css/_BraftonAdminCSS.css
@@ -341,3 +341,18 @@ ul li.fail a.fail{
 section.brafton_article_list {
     font-size: 12px;
 }
+.braf_page{
+    margin-top:15px;
+}
+.braf_page a {
+    padding: 5px 20px;
+    background-color:#0085BA;
+    margin:0px 10px;
+    color:#FFFFFF !important;
+    text-decoration:none;
+    font-weight: 700;
+    border-radius:5px;
+}
+.braf_page a:nth-child(even) {
+    float: right;
+}
